fix (commit list): update scrollbar + resizer styling

--- a/src/frontend/css/vscode.css
+++ b/src/frontend/css/vscode.css
@@ -19,12 +19,13 @@ body {
 	overflow: hidden;
 }
 
-* { scrollbar-width: thin; }
+* { scrollbar-color: unset !important; }
 
 ::-webkit-resizer {
-	background: url("data:image/svg+xml,%3Csvg width='9' height='9' viewBox='0 0 9 9' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M9 1L1 9H9V1Z' fill='%23999' fill-opacity='0.3'/%3E%3C/svg%3E%0A")
+	background: url('data:image/svg+xml,<svg width="8" height="8" viewBox="3 1 8 8" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M7 3L1 3L1 5L7 5L7 3Z" fill="%23999999" fill-opacity="0.2"/></svg>')
 		bottom right no-repeat;
 }
+
 
 *:focus { outline-color: var(--vscode-focusBorder) !important; }
 
